--- a/Yahtzee.vcxproj
+++ b/Yahtzee.vcxproj
@@ -151,6 +151,10 @@
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClCompile Include="Headers\Utils.h" />
+    <ClCompile Include="Source\Die.cpp" />
+    <ClCompile Include="Source\Input.cpp" />
+    <ClCompile Include="Source\Renderer.cpp" />
+    <ClCompile Include="Source\Turn.cpp" />
     <ClCompile Include="Source\Yahtzee.cpp" />
   </ItemGroup>
   <ItemGroup>
@@ -158,11 +162,12 @@
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Headers\Combination.h" />
+    <ClInclude Include="Headers\Config.h" />
     <ClInclude Include="Headers\Die.h" />
     <ClInclude Include="Headers\Input.h" />
     <ClInclude Include="Headers\Player.h" />
     <ClInclude Include="Headers\Renderer.h" />
-    <ClInclude Include="Headers\Round.h" />
+    <ClInclude Include="Headers\Turn.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
