--- a/Yahtzee.vcxproj
+++ b/Yahtzee.vcxproj
@@ -153,6 +153,7 @@
     <ClCompile Include="Headers\Utils.h" />
     <ClCompile Include="Source\Die.cpp" />
     <ClCompile Include="Source\Input.cpp" />
+    <ClCompile Include="Source\Player.cpp" />
     <ClCompile Include="Source\Renderer.cpp" />
     <ClCompile Include="Source\Turn.cpp" />
     <ClCompile Include="Source\Yahtzee.cpp" />
@@ -161,7 +162,7 @@
     <None Include="Other\Task.md" />
   </ItemGroup>
   <ItemGroup>
-    <ClInclude Include="Headers\Combination.h" />
+    <ClInclude Include="Headers\Combos.h" />
     <ClInclude Include="Headers\Config.h" />
     <ClInclude Include="Headers\Die.h" />
     <ClInclude Include="Headers\Input.h" />
