Added Test for testing Combo max possible scores

--- a/Test/YahtzeeTest.vcxproj
+++ b/Test/YahtzeeTest.vcxproj
@@ -172,6 +172,7 @@
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="pch.h" />
+    <ClInclude Include="Helpers.h" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\Main\Yahtzee.vcxproj">
