--- a/Main/Yahtzee.vcxproj
+++ b/Main/Yahtzee.vcxproj
@@ -156,6 +156,7 @@
     <ClCompile Include="Model\Model.cpp" />
     <ClCompile Include="Model\Die.cpp" />
     <ClCompile Include="Model\Player.cpp" />
+    <ClCompile Include="View\SpritesLoader.cpp" />
     <ClCompile Include="View\View.cpp" />
     <ClCompile Include="Yahtzee.cpp" />
   </ItemGroup>
@@ -169,6 +170,7 @@
     <ClInclude Include="Global\Rules.h" />
     <ClInclude Include="Model\Model.h" />
     <ClInclude Include="Model\Die.h" />
+    <ClInclude Include="View\SpritesLoader.h" />
     <ClInclude Include="View\View.h" />
   </ItemGroup>
   <ItemGroup>
