Refactored and documented Sprite Loading and table rendereing while using sprites loaded from file

--- a/Main/Yahtzee.vcxproj
+++ b/Main/Yahtzee.vcxproj
@@ -158,6 +158,7 @@
     <ClCompile Include="Model\Player.cpp" />
     <ClCompile Include="View\SpritesLoader.cpp" />
     <ClCompile Include="View\View.cpp" />
+    <ClCompile Include="View\ViewTable.cpp" />
     <ClCompile Include="Yahtzee.cpp" />
   </ItemGroup>
   <ItemGroup>
