--- a/Main/Yahtzee.vcxproj.filters
+++ b/Main/Yahtzee.vcxproj.filters
@@ -80,6 +80,9 @@
     <ClInclude Include="View\SpritesLoader.h">
       <Filter>Headers</Filter>
     </ClInclude>
+    <ClInclude Include="Global\Utils.h">
+      <Filter>Headers</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <Text Include="Resources\Sprites.txt" />
