--- a/Test/YahtzeeTest.vcxproj
+++ b/Test/YahtzeeTest.vcxproj
@@ -102,7 +102,7 @@
     <Link>
       <SubSystem>Windows</SubSystem>
       <AdditionalLibraryDirectories>..\Main\x64;$(VCInstallDir)UnitTest\lib;%(AdditionalLibraryDirectories)</AdditionalLibraryDirectories>
-      <AdditionalDependencies>..\Main\x64\Debug\Die.obj;..\Main\x64\Debug\Model.obj;%(AdditionalDependencies)</AdditionalDependencies>
+      <AdditionalDependencies>..\Main\x64\Debug\Die.obj;..\Main\x64\Debug\Model.obj;..\Main\x64\Debug\Player.obj;%(AdditionalDependencies)</AdditionalDependencies>
     </Link>
   </ItemDefinitionGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">
@@ -157,7 +157,7 @@
       <EnableCOMDATFolding>true</EnableCOMDATFolding>
       <OptimizeReferences>true</OptimizeReferences>
       <AdditionalLibraryDirectories>..\Main\x64;$(VCInstallDir)UnitTest\lib;%(AdditionalLibraryDirectories)</AdditionalLibraryDirectories>
-      <AdditionalDependencies>..\Main\x64\Debug\Die.obj;..\Main\x64\Debug\Model.obj;%(AdditionalDependencies)</AdditionalDependencies>
+      <AdditionalDependencies>..\Main\x64\Debug\Die.obj;..\Main\x64\Debug\Model.obj;..\Main\x64\Debug\Player.obj;%(AdditionalDependencies)</AdditionalDependencies>
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
